--- a/tests/Makefile.sse2
+++ b/tests/Makefile.sse2
@@ -4,7 +4,7 @@ CFLAGS = -O3 -fomit-frame-pointer -msse2 -malign-double -I..
 FFLAGS = -O3 -fomit-frame-pointer -msse2 -malign-double -I..
 LDFLAGS =
 #CC = icc
-#F77 = ifc
+#F77 = ifort
 #CFLAGS = -O3 -xW -fno-alias -I..
 #FFLAGS = -O3 -xW -fno-alias -I..
 #LDFLAGS = -Vaxlib
