--- a/tests/Makefile.sse3
+++ b/tests/Makefile.sse3
@@ -1,7 +1,7 @@
 CC = gcc
 F77 = g77
-CFLAGS = -O3 -fomit-frame-pointer -msse3 -malign-double -I..
-FFLAGS = -O3 -fomit-frame-pointer -msse3 -malign-double -I..
+CFLAGS = -O3 -fomit-frame-pointer -msse3 -I..
+FFLAGS = -O3 -fomit-frame-pointer -msse3 -I..
 LDFLAGS =
 #CC = icc
 #F77 = ifort
@@ -11,14 +11,14 @@ LDFLAGS =
 
 all: test1d test2d test3d speed1d speed2d speed3d
 
-test1d : test1d.o zfft1d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) test1d.o zfft1d.o kernel1.o sse3.o -o test1d $(LDFLAGS)
+test1d : test1d.o zfft1d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o sse3.o -o test1d $(LDFLAGS)
 
-test2d : test2d.o zfft2d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) test2d.o zfft2d.o kernel1.o sse3.o -o test2d $(LDFLAGS)
+test2d : test2d.o zfft2d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o sse3.o -o test2d $(LDFLAGS)
 
-test3d : test3d.o zfft3d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) test3d.o zfft3d.o kernel1.o sse3.o -o test3d $(LDFLAGS)
+test3d : test3d.o zfft3d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o sse3.o -o test3d $(LDFLAGS)
 
 test1d.o : test1d.f ../param.h
 	$(F77) $(FFLAGS) -c test1d.f -o test1d.o
@@ -29,14 +29,14 @@ test2d.o : test2d.f ../param.h
 test3d.o : test3d.f ../param.h
 	$(F77) $(FFLAGS) -c test3d.f -o test3d.o
 
-speed1d : speed1d.o zfft1d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) speed1d.o zfft1d.o kernel1.o sse3.o -o speed1d $(LDFLAGS)
+speed1d : speed1d.o zfft1d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o sse3.o -o speed1d $(LDFLAGS)
 
-speed2d : speed2d.o zfft2d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) speed2d.o zfft2d.o kernel1.o sse3.o -o speed2d $(LDFLAGS)
+speed2d : speed2d.o zfft2d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o sse3.o -o speed2d $(LDFLAGS)
 
-speed3d : speed3d.o zfft3d.o kernel1.o sse3.o
-	$(F77) $(FFLAGS) speed3d.o zfft3d.o kernel1.o sse3.o -o speed3d $(LDFLAGS)
+speed3d : speed3d.o zfft3d.o fft235.o sse3.o
+	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o sse3.o -o speed3d $(LDFLAGS)
 
 speed1d.o : speed1d.f ../param.h
 	$(F77) $(FFLAGS) -c speed1d.f -o speed1d.o
@@ -56,8 +56,8 @@ zfft2d.o : ../zfft2d.f ../param.h
 zfft3d.o : ../zfft3d.f ../param.h
 	$(F77) $(FFLAGS) -c ../zfft3d.f -o zfft3d.o
 
-kernel1.o : ../kernel1.f
-	$(F77) $(FFLAGS) -c ../kernel1.f -o kernel1.o
+fft235.o : ../fft235.f
+	$(F77) $(FFLAGS) -c ../fft235.f -o fft235.o
 
 sse3.o : ../sse3.c
 	$(CC) $(CFLAGS) -c ../sse3.c -o sse3.o
