--- a/tests/Makefile.sse3
+++ b/tests/Makefile.sse3
@@ -2,23 +2,21 @@ CC = gcc
 F77 = g77
 CFLAGS = -O3 -fomit-frame-pointer -msse3 -I..
 FFLAGS = -O3 -fomit-frame-pointer -msse3 -I..
-LDFLAGS =
 #CC = icc
 #F77 = ifort
-#CFLAGS = -O3 -xP -fno-alias -I..
-#FFLAGS = -O3 -xP -fno-alias -I..
-#LDFLAGS = -Vaxlib
+#CFLAGS = -O3 -xP -I..
+#FFLAGS = -O3 -xP -I..
 
 all: test1d test2d test3d speed1d speed2d speed3d
 
 test1d : test1d.o zfft1d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o sse3.o -o test1d $(LDFLAGS)
+	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o sse3.o -o test1d
 
 test2d : test2d.o zfft2d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o sse3.o -o test2d $(LDFLAGS)
+	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o sse3.o -o test2d
 
 test3d : test3d.o zfft3d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o sse3.o -o test3d $(LDFLAGS)
+	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o sse3.o -o test3d
 
 test1d.o : test1d.f ../param.h
 	$(F77) $(FFLAGS) -c test1d.f -o test1d.o
@@ -30,13 +28,13 @@ test3d.o : test3d.f ../param.h
 	$(F77) $(FFLAGS) -c test3d.f -o test3d.o
 
 speed1d : speed1d.o zfft1d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o sse3.o -o speed1d $(LDFLAGS)
+	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o sse3.o -o speed1d
 
 speed2d : speed2d.o zfft2d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o sse3.o -o speed2d $(LDFLAGS)
+	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o sse3.o -o speed2d
 
 speed3d : speed3d.o zfft3d.o fft235.o sse3.o
-	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o sse3.o -o speed3d $(LDFLAGS)
+	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o sse3.o -o speed3d
 
 speed1d.o : speed1d.f ../param.h
 	$(F77) $(FFLAGS) -c speed1d.f -o speed1d.o
