--- a/mpi/tests/Makefile.vec
+++ b/mpi/tests/Makefile.vec
@@ -1,43 +1,43 @@
 F77 = mpif77
 FFLAGS = -O3 -I../..
-#FFLAGS = -O3 -xHost -I../..
+#FFLAGS = -O3 -xAVX -I../..
 
 all: ptest1d ptest2d ptest3d pspeed1d pspeed2d pspeed3d
 
-ptest1d : ptest1d.o pvzfft1d.o mfft235.o fft235.o kernel.o
-	$(F77) $(FFLAGS) ptest1d.o pvzfft1d.o mfft235.o fft235.o kernel.o -o ptest1d
+ptest1d : ptest1d.o pvzfft1d.o pfactor.o mfft235.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) ptest1d.o pvzfft1d.o pfactor.o mfft235.o fft235.o kernel.o factor.o -o ptest1d
 
-ptest2d : ptest2d.o pvzfft2d.o mfft235.o fft235.o kernel.o
-	$(F77) $(FFLAGS) ptest2d.o pvzfft2d.o mfft235.o fft235.o kernel.o -o ptest2d
+ptest2d : ptest2d.o pvzfft2d.o mfft235.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) ptest2d.o pvzfft2d.o mfft235.o fft235.o kernel.o factor.o -o ptest2d
 
-ptest3d : ptest3d.o pvzfft3d.o  mfft235.o fft235.o kernel.o
-	$(F77) $(FFLAGS) ptest3d.o pvzfft3d.o mfft235.o fft235.o kernel.o -o ptest3d
+ptest3d : ptest3d.o pvzfft3d.o  mfft235.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) ptest3d.o pvzfft3d.o mfft235.o fft235.o kernel.o factor.o -o ptest3d
 
-ptest1d.o : ptest1d.f ../../param.h
+ptest1d.o : ptest1d.f
 	$(F77) $(FFLAGS) -c ptest1d.f -o ptest1d.o
 
-ptest2d.o : ptest2d.f ../../param.h
+ptest2d.o : ptest2d.f
 	$(F77) $(FFLAGS) -c ptest2d.f -o ptest2d.o
 
-ptest3d.o : ptest3d.f ../../param.h
+ptest3d.o : ptest3d.f
 	$(F77) $(FFLAGS) -c ptest3d.f -o ptest3d.o
 
-pspeed1d : pspeed1d.o pvzfft1d.o mfft235.o fft235.o kernel.o
-	$(F77) $(FFLAGS) pspeed1d.o pvzfft1d.o mfft235.o fft235.o kernel.o -o pspeed1d
+pspeed1d : pspeed1d.o pvzfft1d.o pfactor.o mfft235.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) pspeed1d.o pvzfft1d.o pfactor.o mfft235.o fft235.o kernel.o factor.o -o pspeed1d
 
-pspeed2d : pspeed2d.o pvzfft2d.o mfft235.o fft235.o kernel.o
-	$(F77) $(FFLAGS) pspeed2d.o pvzfft2d.o mfft235.o fft235.o kernel.o -o pspeed2d
+pspeed2d : pspeed2d.o pvzfft2d.o mfft235.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) pspeed2d.o pvzfft2d.o mfft235.o fft235.o kernel.o factor.o -o pspeed2d
 
-pspeed3d : pspeed3d.o pvzfft3d.o fft235.o kernel.o mfft235.o
-	$(F77) $(FFLAGS) pspeed3d.o pvzfft3d.o mfft235.o fft235.o kernel.o -o pspeed3d
+pspeed3d : pspeed3d.o pvzfft3d.o fft235.o kernel.o mfft235.o factor.o
+	$(F77) $(FFLAGS) pspeed3d.o pvzfft3d.o mfft235.o fft235.o kernel.o factor.o -o pspeed3d
 
-pspeed1d.o : pspeed1d.f ../../param.h
+pspeed1d.o : pspeed1d.f
 	$(F77) $(FFLAGS) -c pspeed1d.f -o pspeed1d.o
 
-pspeed2d.o : pspeed2d.f ../../param.h
+pspeed2d.o : pspeed2d.f
 	$(F77) $(FFLAGS) -c pspeed2d.f -o pspeed2d.o
 
-pspeed3d.o : pspeed3d.f ../../param.h
+pspeed3d.o : pspeed3d.f
 	$(F77) $(FFLAGS) -c pspeed3d.f -o pspeed3d.o
 
 pvzfft1d.o : ../pvzfft1d.f ../../param.h
@@ -49,6 +49,9 @@ pvzfft2d.o : ../pvzfft2d.f ../../param.h
 pvzfft3d.o : ../pvzfft3d.f ../../param.h
 	$(F77) $(FFLAGS) -c ../pvzfft3d.f -o pvzfft3d.o
 
+pfactor.o : ../pfactor.f
+	$(F77) $(FFLAGS) -c ../pfactor.f -o pfactor.o
+
 mfft235.o : ../../mfft235.f
 	$(F77) $(FFLAGS) -c ../../mfft235.f -o mfft235.o
 
@@ -57,6 +60,9 @@ fft235.o : ../../fft235.f
 
 kernel.o : ../../kernel.f
 	$(F77) $(FFLAGS) -c ../../kernel.f -o kernel.o
+
+factor.o : ../../factor.f
+	$(F77) $(FFLAGS) -c ../../factor.f -o factor.o
 
 clean:
 	rm -f ptest1d ptest2d ptest3d pspeed1d pspeed2d pspeed3d *.o
