--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,68 +1,68 @@
 F77 = f95
 FFLAGS = -O3 -fomit-frame-pointer -fopenmp -I..
 #F77 = ifort
-#FFLAGS = -O3 -xHost -openmp -I..
+#FFLAGS = -O3 -xAVX -openmp -I..
 
 all: test1d test2d test3d rtest2d rtest3d speed1d speed2d speed3d rspeed2d rspeed3d
 
-test1d : test1d.o zfft1d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o kernel.o -o test1d
+test1d : test1d.o zfft1d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o kernel.o factor.o -o test1d
 
-test2d : test2d.o zfft2d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o kernel.o -o test2d
+test2d : test2d.o zfft2d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o kernel.o factor.o -o test2d
 
-test3d : test3d.o zfft3d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o kernel.o -o test3d
+test3d : test3d.o zfft3d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o kernel.o factor.o -o test3d
 
-rtest2d : rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o -o rtest2d
+rtest2d : rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o factor.o -o rtest2d
 
-rtest3d : rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o -o rtest3d
+rtest3d : rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o factor.o -o rtest3d
 
-test1d.o : test1d.f ../param.h
+test1d.o : test1d.f
 	$(F77) $(FFLAGS) -c test1d.f -o test1d.o
 
-test2d.o : test2d.f ../param.h
+test2d.o : test2d.f
 	$(F77) $(FFLAGS) -c test2d.f -o test2d.o
 
-test3d.o : test3d.f ../param.h
+test3d.o : test3d.f
 	$(F77) $(FFLAGS) -c test3d.f -o test3d.o
 
-rtest2d.o : rtest2d.f ../param.h
+rtest2d.o : rtest2d.f
 	$(F77) $(FFLAGS) -c rtest2d.f -o rtest2d.o
 
-rtest3d.o : rtest3d.f ../param.h
+rtest3d.o : rtest3d.f
 	$(F77) $(FFLAGS) -c rtest3d.f -o rtest3d.o
 
-speed1d : speed1d.o zfft1d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o kernel.o -o speed1d
+speed1d : speed1d.o zfft1d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o kernel.o factor.o -o speed1d
 
-speed2d : speed2d.o zfft2d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o kernel.o -o speed2d
+speed2d : speed2d.o zfft2d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o kernel.o factor.o -o speed2d
 
-speed3d : speed3d.o zfft3d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o kernel.o -o speed3d
+speed3d : speed3d.o zfft3d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o kernel.o factor.o -o speed3d
 
-rspeed2d : rspeed2d.o dzfft2d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) rspeed2d.o dzfft2d.o fft235.o kernel.o -o rspeed2d
+rspeed2d : rspeed2d.o dzfft2d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) rspeed2d.o dzfft2d.o fft235.o kernel.o factor.o -o rspeed2d
 
-rspeed3d : rspeed3d.o dzfft3d.o fft235.o kernel.o
-	$(F77) $(FFLAGS) rspeed3d.o dzfft3d.o fft235.o kernel.o -o rspeed3d
+rspeed3d : rspeed3d.o dzfft3d.o fft235.o kernel.o factor.o
+	$(F77) $(FFLAGS) rspeed3d.o dzfft3d.o fft235.o kernel.o factor.o -o rspeed3d
 
-speed1d.o : speed1d.f ../param.h
+speed1d.o : speed1d.f
 	$(F77) $(FFLAGS) -c speed1d.f -o speed1d.o
 
-speed2d.o : speed2d.f ../param.h
+speed2d.o : speed2d.f
 	$(F77) $(FFLAGS) -c speed2d.f -o speed2d.o
 
-speed3d.o : speed3d.f ../param.h
+speed3d.o : speed3d.f
 	$(F77) $(FFLAGS) -c speed3d.f -o speed3d.o
 
-rspeed2d.o : rspeed2d.f ../param.h
+rspeed2d.o : rspeed2d.f
 	$(F77) $(FFLAGS) -c rspeed2d.f -o rspeed2d.o
 
-rspeed3d.o : rspeed3d.f ../param.h
+rspeed3d.o : rspeed3d.f
 	$(F77) $(FFLAGS) -c rspeed3d.f -o rspeed3d.o
 
 zfft1d.o : ../zfft1d.f ../param.h
@@ -91,6 +91,9 @@ fft235.o : ../fft235.f
 
 kernel.o : ../kernel.f
 	$(F77) $(FFLAGS) -c ../kernel.f -o kernel.o
+
+factor.o : ../factor.f
+	$(F77) $(FFLAGS) -c ../factor.f -o factor.o
 
 clean:
 	rm -f test1d test2d test3d rtest2d rtest3d speed1d speed2d speed3d rspeed2d rspeed3d *.o
