--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,99 +1,99 @@
-F77 = f95
-FFLAGS = -O3 -fomit-frame-pointer -fopenmp -I..
-#F77 = ifort
-#FFLAGS = -O3 -xAVX -openmp -I..
+FC = gfortran
+FCFLAGS = -O3 -fomit-frame-pointer -fopenmp -I..
+#FC = ifort
+#FCFLAGS = -O3 -xHOST -qopenmp -I..
 
 all: test1d test2d test3d rtest2d rtest3d speed1d speed2d speed3d rspeed2d rspeed3d
 
 test1d : test1d.o zfft1d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) test1d.o zfft1d.o fft235.o kernel.o factor.o -o test1d
+	$(FC) $(FCFLAGS) test1d.o zfft1d.o fft235.o kernel.o factor.o -o test1d
 
 test2d : test2d.o zfft2d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) test2d.o zfft2d.o fft235.o kernel.o factor.o -o test2d
+	$(FC) $(FCFLAGS) test2d.o zfft2d.o fft235.o kernel.o factor.o -o test2d
 
 test3d : test3d.o zfft3d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) test3d.o zfft3d.o fft235.o kernel.o factor.o -o test3d
+	$(FC) $(FCFLAGS) test3d.o zfft3d.o fft235.o kernel.o factor.o -o test3d
 
 rtest2d : rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o factor.o -o rtest2d
+	$(FC) $(FCFLAGS) rtest2d.o dzfft2d.o zdfft2d.o fft235.o kernel.o factor.o -o rtest2d
 
 rtest3d : rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o factor.o -o rtest3d
+	$(FC) $(FCFLAGS) rtest3d.o dzfft3d.o zdfft3d.o fft235.o kernel.o factor.o -o rtest3d
 
 test1d.o : test1d.f
-	$(F77) $(FFLAGS) -c test1d.f -o test1d.o
+	$(FC) $(FCFLAGS) -c test1d.f -o test1d.o
 
 test2d.o : test2d.f
-	$(F77) $(FFLAGS) -c test2d.f -o test2d.o
+	$(FC) $(FCFLAGS) -c test2d.f -o test2d.o
 
 test3d.o : test3d.f
-	$(F77) $(FFLAGS) -c test3d.f -o test3d.o
+	$(FC) $(FCFLAGS) -c test3d.f -o test3d.o
 
 rtest2d.o : rtest2d.f
-	$(F77) $(FFLAGS) -c rtest2d.f -o rtest2d.o
+	$(FC) $(FCFLAGS) -c rtest2d.f -o rtest2d.o
 
 rtest3d.o : rtest3d.f
-	$(F77) $(FFLAGS) -c rtest3d.f -o rtest3d.o
+	$(FC) $(FCFLAGS) -c rtest3d.f -o rtest3d.o
 
 speed1d : speed1d.o zfft1d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) speed1d.o zfft1d.o fft235.o kernel.o factor.o -o speed1d
+	$(FC) $(FCFLAGS) speed1d.o zfft1d.o fft235.o kernel.o factor.o -o speed1d
 
 speed2d : speed2d.o zfft2d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) speed2d.o zfft2d.o fft235.o kernel.o factor.o -o speed2d
+	$(FC) $(FCFLAGS) speed2d.o zfft2d.o fft235.o kernel.o factor.o -o speed2d
 
 speed3d : speed3d.o zfft3d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) speed3d.o zfft3d.o fft235.o kernel.o factor.o -o speed3d
+	$(FC) $(FCFLAGS) speed3d.o zfft3d.o fft235.o kernel.o factor.o -o speed3d
 
 rspeed2d : rspeed2d.o dzfft2d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) rspeed2d.o dzfft2d.o fft235.o kernel.o factor.o -o rspeed2d
+	$(FC) $(FCFLAGS) rspeed2d.o dzfft2d.o fft235.o kernel.o factor.o -o rspeed2d
 
 rspeed3d : rspeed3d.o dzfft3d.o fft235.o kernel.o factor.o
-	$(F77) $(FFLAGS) rspeed3d.o dzfft3d.o fft235.o kernel.o factor.o -o rspeed3d
+	$(FC) $(FCFLAGS) rspeed3d.o dzfft3d.o fft235.o kernel.o factor.o -o rspeed3d
 
 speed1d.o : speed1d.f
-	$(F77) $(FFLAGS) -c speed1d.f -o speed1d.o
+	$(FC) $(FCFLAGS) -c speed1d.f -o speed1d.o
 
 speed2d.o : speed2d.f
-	$(F77) $(FFLAGS) -c speed2d.f -o speed2d.o
+	$(FC) $(FCFLAGS) -c speed2d.f -o speed2d.o
 
 speed3d.o : speed3d.f
-	$(F77) $(FFLAGS) -c speed3d.f -o speed3d.o
+	$(FC) $(FCFLAGS) -c speed3d.f -o speed3d.o
 
 rspeed2d.o : rspeed2d.f
-	$(F77) $(FFLAGS) -c rspeed2d.f -o rspeed2d.o
+	$(FC) $(FCFLAGS) -c rspeed2d.f -o rspeed2d.o
 
 rspeed3d.o : rspeed3d.f
-	$(F77) $(FFLAGS) -c rspeed3d.f -o rspeed3d.o
+	$(FC) $(FCFLAGS) -c rspeed3d.f -o rspeed3d.o
 
 zfft1d.o : ../zfft1d.f ../param.h
-	$(F77) $(FFLAGS) -c ../zfft1d.f -o zfft1d.o
+	$(FC) $(FCFLAGS) -c ../zfft1d.f -o zfft1d.o
 
 zfft2d.o : ../zfft2d.f ../param.h
-	$(F77) $(FFLAGS) -c ../zfft2d.f -o zfft2d.o
+	$(FC) $(FCFLAGS) -c ../zfft2d.f -o zfft2d.o
 
 zfft3d.o : ../zfft3d.f ../param.h
-	$(F77) $(FFLAGS) -c ../zfft3d.f -o zfft3d.o
+	$(FC) $(FCFLAGS) -c ../zfft3d.f -o zfft3d.o
 
 dzfft2d.o : ../dzfft2d.f ../param.h
-	$(F77) $(FFLAGS) -c ../dzfft2d.f -o dzfft2d.o
+	$(FC) $(FCFLAGS) -c ../dzfft2d.f -o dzfft2d.o
 
 zdfft2d.o : ../zdfft2d.f ../param.h
-	$(F77) $(FFLAGS) -c ../zdfft2d.f -o zdfft2d.o
+	$(FC) $(FCFLAGS) -c ../zdfft2d.f -o zdfft2d.o
 
 dzfft3d.o : ../dzfft3d.f ../param.h
-	$(F77) $(FFLAGS) -c ../dzfft3d.f -o dzfft3d.o
+	$(FC) $(FCFLAGS) -c ../dzfft3d.f -o dzfft3d.o
 
 zdfft3d.o : ../zdfft3d.f ../param.h
-	$(F77) $(FFLAGS) -c ../zdfft3d.f -o zdfft3d.o
+	$(FC) $(FCFLAGS) -c ../zdfft3d.f -o zdfft3d.o
 
 fft235.o : ../fft235.f
-	$(F77) $(FFLAGS) -c ../fft235.f -o fft235.o
+	$(FC) $(FCFLAGS) -c ../fft235.f -o fft235.o
 
 kernel.o : ../kernel.f
-	$(F77) $(FFLAGS) -c ../kernel.f -o kernel.o
+	$(FC) $(FCFLAGS) -c ../kernel.f -o kernel.o
 
 factor.o : ../factor.f
-	$(F77) $(FFLAGS) -c ../factor.f -o factor.o
+	$(FC) $(FCFLAGS) -c ../factor.f -o factor.o
 
 clean:
 	rm -f test1d test2d test3d rtest2d rtest3d speed1d speed2d speed3d rspeed2d rspeed3d *.o
